refactor(VersionedMemorySaver): Replace Collections.emptyList() with List.of() and  add overridden threadId method
working on #386